Layout for properties show added Small bugs fixed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -171,3 +171,12 @@ div
     width: 100%;
     margin: 5px;
 }
+/* property show view */
+.property_facilities
+{
+    height: 100px;
+}
+.property_facilities b
+{
+    height: 100px;
+}
