--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
 
 <footer>
     <p class="container">
-        Created by <a href="mailto:dimitri.labouesse@mydit.ie">Dimitri Labouesse</a> as a school project at DIT</a>.
+        Created by <a href="mailto:dimitri.labouesse@mydit.ie">Dimitri Labouesse</a> as a school project at DIT.
         This project is available on <a href="https://github.com/dlabouesse/accommodationsapp.git">Github</a>.
     </p>
 </footer>
