--- a/app/views/usermailer/register.html.erb
+++ b/app/views/usermailer/register.html.erb
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <h1>Welcome to the the best website to find you future accommodation or roommate!</h1>
+    <h1>Welcome to the the best website to find your future accommodation or roommate!</h1>
     <p>You have successfully signed up.<br />
         You can know enjoy the full functionalities of the website!
     </p>
@@ -13,7 +13,7 @@
 
     <hr />
     <p>
-        Created by <a href="mailto:dimitri.labouesse@mydit.ie">Dimitri Labouesse</a> as a school project at DIT</a>.
+        Created by <a href="mailto:dimitri.labouesse@mydit.ie">Dimitri Labouesse</a> as a school project at DIT.
         This project is available on <a href="https://github.com/dlabouesse/accommodationsapp.git">Github</a>.
     </p>
 
