--- a/app/views/adverts/new.html.erb
+++ b/app/views/adverts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New advert</h1>
+<div class="row">
+    <h1 class="col-xs-12">New advert</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', adverts_path %>
