All layouts are done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="col-md-6">
-        <h2>Our properties</h2>
-        <%= image_tag "https://maps.googleapis.com/maps/api/staticmap?size=450x300"+@markers %>
+        <h2>Our properties in Dublin</h2>
+        <%= image_tag "https://maps.googleapis.com/maps/api/staticmap?size=450x300"+getPropertiesInDublin %>
     </div>
 </div>
