--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,8 @@
 
         <% if @user.biography != "" %>
             <%= simple_format(@user.biography) %>
+        <% else %>
+            <p><em>No biography has been written by this user.</em></p>
         <% end %>
 
     </div>
