--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -184,3 +184,21 @@ div
 {
     width: 80px;
 }
+/* user index view */
+.users_list tr td, .properties_list tr td
+{
+    padding-right: 20px;
+    padding-left: 20px;
+}
+.users_list, .properties_list
+{
+    margin: auto;
+}
+.users_list tr:nth-child(odd), .properties_list tr:nth-child(odd)
+{
+    background-color: #E9E9E9;
+}
+.users_list tr:nth-child(even), .properties_list tr:nth-child(even)
+{
+    background-color: #F9F9F9;
+}
