--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,48 +2,25 @@
     <h1 class="col-xs-12">Listing users</h1>
 </div>
 
-<table>
-  <tr>
-    <th>Gender</th>
-    <th>First name</th>
-    <th>Last name</th>
-    <!--<th>Email</th>
-    <th>Phone</th>-->
-    <!--<th>Biography</th>-->
-    <th>Dob</th>
-    <th>Nationality</th>
-    <th>Living in</th>
-    <!--<th>Password digest</th>-->
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @users.each do |user| %>
-  <tr>
-      <td><%= user.gender %></td>
-    <td><%= user.first_name %></td>
-    <td><%= user.last_name %></td>
-    <!--<td><%= user.email %></td>
-    <td><%= user.phone %></td>-->
-    <!--<td><%= user.biography %></td>-->
-    <td><%= user.dob.find_age %> years old</td>
-    <td><%= user.nationality %></td>
-    <% if user.property_id == nil %>
-        <td>No property</td>
-    <% else %>
-        <td><%= link_to user.property.address, user.property %></td>
-    <% end %>
-    <!--<td><%= user.password_digest %></td>-->
-    <td><%= link_to 'Show', user %></td>
-
-    <% if signed_in? && @current_user.admin == true %>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= button_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
-    <% end %>
-
-  </tr>
-<% end %>
-</table>
-
-<br />
+<div class="row">
+    <table class="col-xs-12 users_list">
+        <% @users.each do |user| %>
+            <tr>
+                <td><strong><%= link_to user.gender+" "+user.complete_name, user %></strong></td>
+                <td><%= user.nationality %></td>
+                <td><%= user.dob.find_age %> years old</td>
+                <td>
+                    <% if user.property_id == nil %>
+                        <em>Doesn't have a property yet.</em>
+                    <% else %>
+                        <em>Lives at <%= link_to user.property.address, user.property %></em>
+                    <% end %>
+                </td>
+                <% if signed_in? && @current_user.admin == true %>
+                    <td><%= link_to 'Edit', edit_user_path(user) %></td>
+                    <td><%= button_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
+                <% end %>
+            </tr>
+        <% end %>
+    </table>
+</div>
