--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New image</h1>
+<div class="row">
+    <h1 class="col-xs-12">New image</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', images_path %>
