Number of free beds displayed on geocoder markers

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,5 +29,6 @@
     <div class="col-md-6">
         <h2>Our properties in Dublin</h2>
         <%= image_tag "https://maps.googleapis.com/maps/api/staticmap?size=450x300"+getPropertiesInDublin %>
+        <p><em>The numbers display the number of free beds.</em></p>
     </div>
 </div>
